Proyecto_Blockchain/bcentral-poc-infra/bases/infrastructure/prometheus/loki/grafana-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana-proxy
  namespace: monitoring
spec:
  virtualhost:
    fqdn: grafana.labbcch.local
    tls:
      secretName: grafana-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: prometheus-grafana
          port: 80
